2010-04-08  Charlie Zender  <zender@uci.edu>

	* These patches caused build breakage. Not surprising. Will try to fix.

	* Apply patches from Denis Nadeau to prevent namespace clashes
	between NCO symbols generated by Flex/Bison, and those symbols
	generated by other programs (MPI, netCDF) that also use
	Flex/Bison. 

2010-04-06  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.2 release procedure:
	Changes since nco-4_0_1: fxm
	cd ~/nco;cvs tag -d nco-4_0_2;cvs tag -d nco-4_0_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.2 release"
	cvs tag -c nco-4_0_2;cvs tag -c nco-4_0_2-1

	* Oops! VERSION file released with 4.0.1 may say version is 4.0.0?

	* NCO 4.0.1 release procedure:
	Changes since nco-4_0_0: fix_rec_dmn, mk_rec_dmn, .ncrename
	cd ~/nco;cvs tag -d nco-4_0_1;cvs tag -d nco-4_0_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.1 release"
	cvs tag -c nco-4_0_1;cvs tag -c nco-4_0_1-1

2010-04-05  Charlie Zender  <zender@uci.edu>

	* Revert change to libnetcdf-dev (>= 1:4.0.0) in control since
	Ubuntu does not yet support newer version.

2010-04-04  Charlie Zender  <zender@uci.edu>

	* Change Debian to libnetcdf4 with libnetcdf-dev (>= 1:4.0.0) in control

2010-03-29  Charlie Zender  <zender@uci.edu>

	* Cleanup and document '--mk_rec_dmn' switch

2010-03-22  Henry Butowsky  <henryb@hush.com> 

	* Add '--mk_rec_dmn' switch to ncks: 
	Allows user to (re-)define the record dimension. If the redefined
	record dimension is not the first dimension of a given variable,
	then ncks fails with an error message.

2010-03-15  Charlie Zender  <zender@uci.edu>

	* Remove consti-fication of return values in global functions

2010-03-13  Charlie Zender  <zender@uci.edu>

	* Comment-out "\input texinfo" from my-bib-macros.texi to prevent
	that string from appearing in printed output. 
	
2010-03-11  Charlie Zender  <zender@uci.edu>

	* Fix ncrename.c to not die after skipping non-existent targets
	(variables/dimensions/attributes) preceded by '.'. Longstanding bug!
